<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vibrator</string>
    <string name="manage_pattern">Manage Patterns</string>
    <string name="list_commands">List Commands</string>
    <string name="list_of_commands">Voice Commands</string>
    <string name="pattern_name">Pattern Name : </string>
    <string name="time_remaining">Remaining Time : </string>
    <string name="timer_default_text">0</string>
    <string name="manual_controls">Manual Controls : </string>
    <string name="voice_control">Voice Control : </string>
    <string name="navigate">Navigate To : </string>
    <string name="capture_pattern">Save New Pattern : </string>
    <string name="delete_pattern">Delete Existing Pattern : </string>
    <string name="select_capture_duration">Capture Duration (seconds) : </string>
    <string name="prompt_select_pattern">Select a Pattern</string>
    <string name="prompt_select_duration">Select Duration (seconds)</string>
    <string name="button_delete">Delete</string>
    <string name="button_capture_not_capturing">Touch me to start capture</string>
    <string name="button_capture_capturing">Capturing...</string>
    <string name="button_ok">OK</string>
    <string name="button_faster">&gt;&gt;</string>
    <string name="button_slower">&lt;&lt;</string>
    <string name="turn_on">Vibrator ON</string>
    <string name="turn_off">Vibrator OFF</string>
    <string name="voice_commands_on">Touch the screen and talk</string>
    <string name="voice_commands_off">Voice Commands OFF</string>
    <string name="speech_recognition_unavailable">Speech recognition is unavailable</string>
    <string name="speech_recog_prompt">Command me mistress!</string>
    
    <string name="dialog_title_info">Info</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_msg_capture_abort">"Capture of pattern with name '%1$s' was aborted because the activity lost focus during the operation."</string>
    <string name="dialog_msg_capture_success">Pattern is captured.</string>
    <string name="dialog_msg_delete_success">Pattern is deleted.</string>
    <string name="dialog_msg_duplicate_name">"There already exists a pattern with name '%1$s'."</string>
    <string name="dialog_msg_pattern_name_missing">Please enter a name for the pattern you wish to capture.</string>
    <string name="dialog_msg_pattern_name_too_long">Pattern names can be maximum %1$d characters long.</string>
    <string name="dialog_msg_no_pattern_selected">Please select the pattern you wish to delete.</string>
    <string name="dialog_msg_reserved_name">Voice commands cannot be used as pattern names.</string>
    <string name="dialog_msg_not_spellable">Please use only letters and whitespace.</string>
    
    <string name="predefined_pattern_continuous">CONTINUOUS</string>
    <string name="predefined_pattern_regular">REGULAR</string>
    
</resources>
