<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/border"
    >
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    <TextView
	    	style="@style/VibratorHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/manual_controls"
	    />
	    <Spinner 
	        android:id="@+id/spinnerPatterns"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/prompt_select_pattern"
	    />
	    <LinearLayout 
	    	android:orientation="horizontal"
	    	android:layout_height="wrap_content"
	    	android:layout_width="fill_parent"
	    	>
	    	<TextView
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="0.20"
	    	/>
		    <ToggleButton 
		 		android:id="@+id/buttonOnOff" 
		 		android:layout_height="wrap_content" 
		 		android:layout_width="0dp"
		 		android:textOff="@string/turn_off"
		 		android:textOn="@string/turn_on"
		 		android:layout_weight="0.60" 
		 	/>
		 	<TextView
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="0.20"
	    	/>
	    </LinearLayout>
	 	<ImageView 
	    	android:layout_gravity="center_horizontal" 
	    	android:id="@+id/imageviewIcon" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content"
	    	android:src="@drawable/icon"
	    	android:layout_margin="10dp"
	    />
	    <LinearLayout 
	    	android:orientation="horizontal"
	    	android:layout_height="wrap_content"
	    	android:layout_width="fill_parent"
	    	>
	    	<TextView
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="0.20"
	    	/>
	    	<Button 
	    		android:id="@+id/buttonSlower" 
	    		android:layout_height="wrap_content"
	    		android:layout_width="0dp" 
	    		android:text="@string/button_slower"
	    		android:textStyle="bold"
	    		android:layout_weight="0.30"
	    	/>
	        <Button 
	    		android:id="@+id/buttonFaster" 
	    		android:layout_height="wrap_content" 
	    		android:layout_width="0dp"
	    		android:text="@string/button_faster"
	    		android:textStyle="bold"
	    		android:layout_weight="0.30"
	    	/>
	    	<TextView
	        	android:layout_width="0dp"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="0.20"
	    	/>
	    </LinearLayout>
	    <TextView
	    	style="@style/VibratorHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/voice_control"
	    />
	   <ToggleButton 
	 		android:id="@+id/buttonToggleVoiceCommands" 
	 		android:layout_height="wrap_content" 
	 		android:layout_width="fill_parent"
	 		android:textOff="@string/voice_commands_off"
	 		android:textOn="@string/voice_commands_on"
	 		android:drawableTop="@android:drawable/ic_btn_speak_now"
	 	/>
	 	<TextView
	    	style="@style/VibratorHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/navigate"
	    />
	    <LinearLayout 
	    	android:orientation="horizontal"
	    	android:layout_height="wrap_content"
	    	android:layout_width="fill_parent"
	    	>
		    <Button 
		    	android:id="@+id/buttonManagePatterns" 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="0dp" 
		    	android:text="@string/manage_pattern"
		    	android:layout_weight="0.50"
		    />
		    <Button 
		    	android:id="@+id/buttonCommandsList" 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="0dp" 
		    	android:text="@string/list_commands"
		    	android:layout_weight="0.50"
		    />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>
